# test-cloud-agent

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  indexer.py  main.py  models.py  sandbox.py  schemas.py
backend/app/routers/: chats.py  repos.py  sandboxes.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatWindow.tsx  RepoPanel.tsx  Sidebar.tsx  WorkspacePanel.tsx
sandbox/: Dockerfile  start-vnc.sh
